Fix vertical align in Chrome

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -151,6 +151,7 @@ nav {
         display: inline-block;
         padding: 0 10px;
         line-height: @nav-height;
+        vertical-align: top;
         &:hover {
             color: lighten(@blue, 15%);
             text-decoration: none;
